--- a/style.css
+++ b/style.css
@@ -202,6 +202,10 @@ img {
     margin-left: 100px;
 }
 
+.padding-30 {
+    padding-right: -30px;
+}
+
 ul,
 ol {
     margin: 0;
@@ -979,7 +983,7 @@ p {
 }
 
 .app-screenshots-area .owl-dot.active {
-    background-color: #fb397d;
+    background-color: #ed1c24;
     border: transparent;
 }
 
